--- a/package.json
+++ b/package.json
@@ -42,7 +42,11 @@
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.17"
+    "typeorm": "^0.3.17",
+    "file-type": "^16.2.0",
+    "aws-sdk": "^2.1605.0",
+    "@types/multer": "^1.4.11",
+    "speakeasy": "^2.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
