--- a/package.json
+++ b/package.json
@@ -34,19 +34,20 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.14",
     "@nestjs/typeorm": "^10.0.0",
+    "@types/multer": "^1.4.11",
+    "aws-sdk": "^2.1605.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "file-type": "^16.2.0",
+    "image-size": "^1.1.1",
     "mysql2": "^3.6.3",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.17",
-    "file-type": "^16.2.0",
-    "aws-sdk": "^2.1605.0",
-    "@types/multer": "^1.4.11",
-    "speakeasy": "^2.0.0"
+    "speakeasy": "^2.0.0",
+    "typeorm": "^0.3.17"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
