--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "fetch": "^1.1.0",
     "file-type": "^16.2.0",
     "image-size": "^1.1.1",
     "mysql2": "^3.6.3",
