--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "fetch": "^1.1.0",
     "file-type": "^16.2.0",
     "image-size": "^1.1.1",
+    "moment": "^2.30.1",
     "mysql2": "^3.6.3",
     "nodemailer": "^6.9.13",
     "passport": "^0.6.0",
