--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@nestjs/typeorm": "^10.0.0",
     "@types/multer": "^1.4.11",
     "aws-sdk": "^2.1605.0",
+    "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
