--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "sharp": "^0.33.5",
     "speakeasy": "^2.0.0",
     "typeorm": "^0.3.17"
   },
